make sure the legend stays readabl on smaller screens

--- a/source/common/res/features/reports/spendingByCategory/main.css
+++ b/source/common/res/features/reports/spendingByCategory/main.css
@@ -25,6 +25,12 @@
 	background-color: #4b4c4b;
 }
 
+.ynabtk-category-entry-name {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
 .ynabtk-category-entry-amount {
 	margin-left: auto;
 }
